Modal z-index fixed

--- a/frontend/react-app/src/components/context/Modal.css
+++ b/frontend/react-app/src/components/context/Modal.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: 100000;
 
 
   }
